--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "UniCloud",
+  "name": "unicloud",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -64,5 +64,17 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.6.3"
-  }
+  },
+  "description": "[![Open Issues](https://img.shields.io/github/issues-raw/UdL-EPS-SoftArch/UniCloud?logo=github)](https://github.com/orgs/UdL-EPS-SoftArch/projects/13)\r [![CI/CD](https://github.com/UdL-EPS-SoftArch/UniCloud/actions/workflows/ci-cd.yml/badge.svg)](https://github.com/UdL-EPS-SoftArch/UniCloud/actions)\r [![UniCloud](https://img.shields.io/endpoint?url=https://dashboard.cypress.io/badge/simple/ps5jws&style=flat&logo=cypress)](https://dashboard.cypress.io/projects/ps5jws/runs)\r [![Heroku App Status](https://heroku-shields.herokuapp.com/unicloud)](https://unicloud.herokuapp.com)",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/UdL-EPS-SoftArch/UniCloud.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/UdL-EPS-SoftArch/UniCloud/issues"
+  },
+  "homepage": "https://github.com/UdL-EPS-SoftArch/UniCloud#readme"
 }
