Force passing PROFILE env through docker cli

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: '14.x'
       - name: Test and build
         run: |
-          docker run -d -p 8080:8080 udlepssoftarch/unicloud-api
+          docker run -d -p 8080:8080 -e "PROFILE=test" udlepssoftarch/unicloud-api
           while ! nc -z localhost 8080; do sleep 10; done
           docker ps -a
           npm ci
