Try with different Subject name

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,18 +28,12 @@ jobs:
           npm run lint
           npx start-server-and-test start http-get://localhost:4200 'cypress run --record --key ${{ secrets.CYPRESS_KEY }}'
           npm run build -- --configuration production
-      - name: Upload Cypress screenshots
+      - name: Upload Cypress outputs
         uses: actions/upload-artifact@v3
         if: failure()
         with:
-          name: cypress-snapshots
-          path: cypress/snapshots
-      - name: Upload Cypress videos
-        uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-          name: cypress-videos
-          path: cypress/videos
+          name: cypress-outputs
+          path: cypress
       - name: Build Docker image and deploy to Heroku
         if: ${{ github.event_name == 'push' }}
         uses: jctaveras/heroku-deploy@v2.1.1
